Updated homepage, link to about added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,36 @@
+<!DOCTYPE html>
 <html>
-<header><title>Hello World</title></header>
+<head>
+<link rel="SHORTCUT ICON" HREF="/logo.jpg">
+<link rel="stylesheet" type="text/css" 
+href="mystyle.css">
+
 <body>
-Hello world
+
+	<div class="title">
+		<img src="logo.jpg" alt="logo"/>
+		<h1>Boise State Weight Lifting</h1>	
+	</div>
+	
+	<div class="nav">
+		<ul>
+			<li><a href="about.html">About Us</a></li>
+			<li><a href="#members">Members</a></li>
+			<li><a href="#workouts">Workouts</a></li>
+	</div>
+	
+	<div class="middle">
+		<div class="login">
+			<h2>Connecting BSU students that share an intrest in fitness</h2>
+			<label><br><font color="white">Username</font></br></label>
+			<input type="text" placeholder=" " name="uname" required>
+			
+			<label><br><font color="white">Password</font></br></label>
+			<input type="password" placeholder="" name="pswd" required>
+			
+			<button type="submit">Login</button>
+			<a href="#newmember">Not a member?</a> 
+		</div>
+	</div>
 </body>
 </html>
