about paragraph started

--- a/about.html
+++ b/about.html
@@ -12,9 +12,16 @@ href="mystyle.css">
 	
 	<div class="nav">
 		<ul>
-			<li><a href="#about us">About Us</a></li>
+			<li><a href="about.html">About Us</a></li>
 			<li><a href="#members">Members</a></li>
 			<li><a href="#workouts">Workouts</a></li>
+	</div>
+	<div class="about">
+	
+		<h1>Who are we?</h1>
+		<p>Boise State Weightlifting club is a group of BSU students that share an interst in 
+		physical fitness. We have members that are interested in every aspect of fitness, from bodybuilding,
+		to powerlifting, and everything in-between</p>
 	</div>
 </body>
 </html>
