Added most skeleton pages

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="SHORTCUT ICON" HREF="/logo.jpg">
 <link rel="stylesheet" type="text/css" 
 href="mystyle.css">
 
@@ -13,15 +14,21 @@ href="mystyle.css">
 	<div class="nav">
 		<ul>
 			<li><a href="about.html">About Us</a></li>
-			<li><a href="#members">Members</a></li>
+			<li><a href="members.html">Members</a></li>
 			<li><a href="#workouts">Workouts</a></li>
 	</div>
-	<div class="about">
+	<div class="about_info">
 	
 		<h1>Who are we?</h1>
 		<p>Boise State Weightlifting club is a group of BSU students that share an interst in 
 		physical fitness. We have members that are interested in every aspect of fitness, from bodybuilding,
 		to powerlifting, and everything in-between</p>
+	</div>
+	
+	<div class="about_photo">
+		<figure>
+			<img src="olivia_squat.jpg" alt="lifting"/>
+			<figcaption><font color="white"> Club president Olivia Ottinger squats 285 lbs to break Idaho State Junior Record. She broke all State records this meet 8/28</font></figcaption>
 	</div>
 </body>
 </html>
