--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ href="mystyle.css">
 	<div class="nav">
 		<ul>
 			<li><a href="about.html">About Us</a></li>
-			<li><a href="#members">Members</a></li>
+			<li><a href="members.html">Members</a></li>
 			<li><a href="#workouts">Workouts</a></li>
 	</div>
 	
