Skeleton HTML complete... kind of

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@ href="mystyle.css">
 			<input type="password" placeholder="" name="pswd" required>
 			
 			<button type="submit">Login</button>
-			<a href="#newmember">Not a member?</a> 
+			<a href="newmember.html">Not a member?</a> 
 		</div>
+	</div>
+	<div class="footer">
+		<p><font color="white">Posted by: BSU Weightlifting</font></p>
+		<p><font color="white">Contact information: kennyoverly@u.boisestate.edu</font></p>
 	</div>
 </body>
 </html>
