--- a/about.html
+++ b/about.html
@@ -17,18 +17,26 @@ href="mystyle.css">
 			<li><a href="members.html">Members</a></li>
 			<li><a href="#workouts">Workouts</a></li>
 	</div>
-	<div class="about_info">
+	<div class="about_middle">
+		<div class="about_info">	
+			<h1>Who are we?</h1>
+			<p>Boise State Weightlifting club is a group of BSU students that share an interst in 
+			physical fitness. We have members that are interested in every aspect of fitness, from bodybuilding,
+			to powerlifting, and everything in-between</p>
+		</div>
 	
-		<h1>Who are we?</h1>
-		<p>Boise State Weightlifting club is a group of BSU students that share an interst in 
-		physical fitness. We have members that are interested in every aspect of fitness, from bodybuilding,
-		to powerlifting, and everything in-between</p>
-	</div>
-	
-	<div class="about_photo">
-		<figure>
-			<img src="olivia_squat.jpg" alt="lifting"/>
-			<figcaption><font color="white"> Club president Olivia Ottinger squats 285 lbs to break Idaho State Junior Record. She broke all State records this meet 8/28</font></figcaption>
+		<div class="about_photo">
+			<figure>
+				<img src="olivia_squat.jpg" alt="lifting"/>
+				<figcaption><font color="white"> Club president Olivia Ottinger squats 285 lbs to break Idaho State Junior Record. She broke all State records this meet 8/28</font></figcaption>
+		</div>
 	</div>
 </body>
+	<div class="footer">
+		<footer>
+		<p><font color="white">Posted by: BSU Weightlifting</font></p>
+		<p><font color="white">Contact information:
+		kennyoverly@u.boisestate.edu</font></p>
+		</footer>
+	</div>
 </html>
