--- a/members.html
+++ b/members.html
@@ -24,5 +24,10 @@ href="mystyle.css">
 			<li> More individuals to follow</li>
 		</ul>
 	</div>
+	<div class="footer">
+		<p><font color="white">Posted by: BSU Weightlifting</font></p>
+		<p><font color="white">Contact information:
+		kennyoverly@u.boisestate.edu</font></p>
+	</div>
 </body>
 </html>
