--- a/newmember.html
+++ b/newmember.html
@@ -11,31 +11,17 @@ href="mystyle.css">
 		<h1>Boise State Weight Lifting</h1>	
 	</div>
 	
-	<div class="nav">
-		<ul>
-			<li><a href="about.html">About Us</a></li>
-			<li><a href="members.html">Members</a></li>
-			<li><a href="#workouts">Workouts</a></li>
-	</div>
+	
 	<div class="join">
 		<h2><font color = "white"">Join the team to get connected!</font></h2>
-		
-		<label><br><font color="white">First Name</font></br></label>
-			<input type="text" placeholder=" " name="fname" required>
 			
-		<label><br><font color="white">Last Name</font></br></label>
-			<input type="text" placeholder=" " name="lname" required>
-
-		<label><br><font color="white">Student ID#</font></br></label>
-			<input type="text" placeholder=" " name="stuID" required>
-			
-		<label><br><font color="white">Username</font></br></label>
-			<input type="text" placeholder=" " name="uname" required>
+		<label><br><font color="white">Email</font></br></label>
+			<input id="username" type="text" placeholder=" " name="username" required>
 			
 		<label><br><font color="white">Password</font></br></label>
-			<input type="password" placeholder="" name="pswd" required>
+			<input id="password" type="password" placeholder="" name="passsword" required>
 		
-		<button type="submit">Join!</button>	
+		<button type="submit"><a href="index.html">Join!</a></button>	
 	
 	</div>
 	<div class="footer">
