--- a/about.html
+++ b/about.html
@@ -9,13 +9,13 @@ href="mystyle.css">
 	<div class="title">
 		<img src="logo.jpg" alt="logo"/>
 		<h1>Boise State Weight Lifting</h1>	
+		<a href="logout.php"><font color="white">logout</font></a>
 	</div>
 	
 	<div class="nav">
 		<ul>
 			<li><a href="about.html">About Us</a></li>
 			<li><a href="members.html">Members</a></li>
-			<li><a href="#workouts">Workouts</a></li>
 	</div>
 	<div class="about_middle">
 		<div class="about_info">	
