--- a/newmember.html
+++ b/newmember.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <link rel="SHORTCUT ICON" HREF="/logo.jpg">
 <link rel="stylesheet" type="text/css" 
 href="mystyle.css">
@@ -13,16 +14,16 @@ href="mystyle.css">
 	
 	
 	<div class="join">
-		<h2><font color = "white"">Join the team to get connected!</font></h2>
-			
-		<label><br><font color="white">Email</font></br></label>
-			<input id="username" type="text" placeholder=" " name="username" required>
-			
-		<label><br><font color="white">Password</font></br></label>
-			<input id="password" type="password" placeholder="" name="passsword" required>
+		<h2><font color = "white">Join the team to get connected!</font></h2>
+			<form action="newmember.php" method="POST">
 		
-		<button type="submit"><a href="index.html">Join!</a></button>	
-	
+				<label><br><font color="white">Email</font></br></label>
+					<input id="email" type="text"  name="email" required>
+				<label><br><font color="white">Password</font></br></label>
+					<input id="password" type="password" name="password" required>
+		
+			<button type="submit">Join!</button>	
+		</form>
 	</div>
 	<div class="footer">
 		<footer>
